# mcrt

./: .gitignore  .gitmodules  CLAUDE.md  README.md  pyproject.toml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: Layout.tsx
frontend/src/components/charts/: ReflectanceChart.tsx
frontend/src/components/material/: MaterialSelector.tsx
frontend/src/components/medium/: LayerConfig.tsx  MediumVisualization3D.tsx
frontend/src/components/simulation/: PhotonConfig.tsx  WavelengthConfig.tsx
frontend/src/pages/: ComparisonPage.tsx  DocumentationPage.tsx  SimulationPage.tsx  ThinFilmPage.tsx
frontend/src/services/: api.ts  sse.ts
frontend/src/store/: index.ts
frontend/src/types/: index.ts
jena-database/: download.sh
scripts/: generate_ad_reference.py  parse_jcamp.py  validate_against_adding_doubling.py  validate_hematite.py  validate_mc_rigorous.py  validate_mie_theory.py  validate_reflectance.py
src/mcrt/: __init__.py  cli.py
src/mcrt/api/: __init__.py  app.py  models.py  routes.py  sse.py
src/mcrt/data/reference/: adding_doubling_fe2o3.csv  adding_doubling_fe2o3.json
src/mcrt/fos/: __init__.py  input_builder.py  output_parser.py  wrapper.py
src/mcrt/io/: __init__.py
src/mcrt/materials/: __init__.py  custom.py  database.py  jena_database.py
src/mcrt/mie/: __init__.py
src/mcrt/reference_data/: __init__.py  adding_doubling_fe2o3.json  hematite_usgs_10-20um.json  hematite_usgs_lt10um.json  quartz_sand_nist.json
src/mcrt/simulation/: __init__.py  manager.py  progressive.py  state.py
src/mcrt/thinfilm/: __init__.py
tests/: __init__.py  conftest.py  test_api.py  test_fos_performance.py  test_materials.py  test_simulation.py  test_thinfilm.py  test_thinfilm_validation.py
